static/homepage_style.css
@font-face {
  font-family: Inter;
  src: url("InterVariable.ttf");
}

.titles {
  display: flex;
  flex-direction: column;
  align-items: center;
  padding-left: 20px;
  padding-right: 20px;
}

.box {
  display: flex;
  flex-direction: column;
  align-items: center;
}

.header {
  color: #bcffad;
  padding: 10px;
  margin: 0;
  text-align: center;
  align-content: center;
}

.header img {
  image-rendering: pixelated;
}

@media (max-width: 1050px) {
  .header img {
    height: 80%;
    width: 80%;
  }
}

.subheader {
  display: flex;
  flex-direction: column;
  color: #bcffad;
  background-color: #003d09;
  padding: 0.625rem;
  margin-bottom: 0.5rem;
  border-radius: 0.7rem;
  text-align: center;
}

.subheader h1 {
  margin: 0;
}

#emotion {
  border-style: inset;
  border-color: green;
  background-color: darkgreen;
  color: lightgreen;
}

#submit {
  border-style: outset;
  border-color: green;
  background-color: lightgreen;
  color: darkgreen;
}

.background {
  background-color: #dbffd5;
  font-family: Inter, serif;
}

.page-body {
  overflow-x: hidden;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
}

.panels {
  display: flex;
  max-width: 80rem;
  flex-direction: row;
  justify-content: flex-start;
  padding: 2rem;
  background-color: #267713;
  color: #dcffd6;
  border-radius: 0.5rem;
  margin: 0 1rem 2rem;
}

.panels div {
  padding: 2rem;
  margin: 2rem;
  border-image-source: url("colourborder.png");
  border-image-slice: 71 71 71 91;
  border-image-width: 1rem 1rem 1rem 1rem;
  border-image-outset: 0.3rem 0.3rem 0.3rem 0.3rem;
  border-image-repeat: stretch stretch;
  image-rendering: pixelated;
  border-style: solid;
}

.sidebar {
  display: grid;
  min-width: 244px;
}

.sidebar nav {
  display: grid;
  justify-items: center;
}

.sidebar a {
  text-decoration: none;
  text-align: center;
  max-width: fit-content;
  color: #bcffad;
  background-color: #003d09;
  border-radius: 0.7rem;
  margin: 0.5rem 0.25rem;
  padding: 0.5rem;
}

.sidebar a:hover {
  color: #003d09;
  background-color: #bcffad;
}

.bio {
  display: grid;
}

.bio a {
  text-decoration: none;
  text-align: center;
  max-width: fit-content;
  color: #bcffad;
  background-color: #003d09;
  border-radius: 1rem;
  margin: 0.1rem;
  padding: 0.2rem;
}

.bio a:hover {
  color: #003d09;
  background-color: #bcffad;
}

@media (max-width: 1050px) {
  .panels {
    display: flex;
    max-width: 80rem;
    flex-direction: column-reverse;
    justify-content: center;
    padding: 2rem;
    background-color: #267713;
    color: #dcffd6;
    border-radius: 0.5rem;
  }

  .panels div {
    padding: 2rem;
    margin: 2rem;
    border-image-source: url("colourborder.png");
    border-image-slice: 71 71 71 91;
    border-image-width: 1rem 1rem 1rem 1rem;
    border-image-outset: 0.3rem 0.3rem 0.3rem 0.3rem;
    border-image-repeat: stretch stretch;
    image-rendering: pixelated;
    border-style: solid;
  }

  .sidebar nav {
    display: flex;
    flex-direction: row;
    align-items: center;
    justify-content: center;
    flex-wrap: wrap;
  }

  .sidebar h2 {
    text-align: center;
  }

  .bio {
    text-align: center;
  }
}

.bearcorner {
  position: absolute;
  display: inline-block;
  transition: all 0.2s ease-in-out;
}

.bearcorner:hover {
  transform: scale(1.1);
}

.footer {
  display: flex;
  flex-direction: row;
  flex-wrap: wrap;
  border: 5px solid rgb(64, 159, 51);
  background-color: rgb(64, 159, 51);
  align-items: center;
  justify-content: center;
  border-radius: 10px;
  margin: 1rem;
}

.footer img {
  padding: 0.5rem;
  transition: all 0.2s ease-in-out;
}

.footer img:hover {
  transform: scale(1.1);
}

@media (max-width: 1050px) {
  .footer {
    margin: 0.5rem 10%;
  }
}

.neobrutal {
  box-shadow: 0.5em 0.5em #001704;
  border-radius: 0.4rem;
}

.nb-button {
  box-shadow: 0.4em 0.4em #001804;
  transition: 0.2s ease-in-out;
}

.nb-button:hover {
  transform: translate(0.4em, 0.4em);
  box-shadow: 0 0 #001804;
}

